--- a/census.ipynb
+++ b/census.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 494,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,14 @@
     "import numpy as np\n",
     "import requests\n",
     "from functools import lru_cache\n",
-    "import hashlib"
+    "import hashlib\n",
+    "import configparser\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 495,
    "id": "1c1801ee",
    "metadata": {},
    "outputs": [],
@@ -25,12 +27,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 507,
    "id": "eefbaac9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "k = \"f7217cc1222e7cecb49db88b036d517681dd703b\""
+    "# k = \"f7217cc1222e7cecb49db88b036d517681dd703b\"\n",
+    "def census_key():\n",
+    "    \"\"\"\n",
+    "    Output: \n",
+    "        Returns your Census API key\n",
+    "    \"\"\"\n",
+    "    secret_path = os.path.expanduser(\"~\") + \"/.secrets\" # .secrets should live in your home directory \n",
+    "    config = configparser.RawConfigParser()\n",
+    "    config.read(secret_path)\n",
+    "\n",
+    "    details_dict = dict(config.items(\"CENSUS_API\"))\n",
+    "    airtable_key = details_dict[\"census_api_key\"]\n",
+    "\n",
+    "    return airtable_key"
    ]
   },
   {
@@ -41,7 +56,7 @@
    "outputs": [],
    "source": [
     "@lru_cache(maxsize=None)\n",
-    "def census_tract_api(year, profile, state_id, k):\n",
+    "def census_tract_api(year, profile, state_id, k = census_key()):\n",
     "    url = f\"https://api.census.gov/data/{year}/acs/acs5/profile?get=group({profile})&for=tract:*&in=state:{state_id}&key={k}\"\n",
     "\n",
     "    # request url for provided variable code & year\n",
@@ -105,7 +120,7 @@
    "outputs": [],
    "source": [
     "# call census api using function\n",
-    "df_api_return = census_tract_api(2020, \"DP02\", \"19\", k)"
+    "df_api_return = census_tract_api(2020, \"DP02\", \"19\")"
    ]
   },
   {
