reading parquet instead of csv

--- a/2_learn/census_viz.ipynb
+++ b/2_learn/census_viz.ipynb
@@ -11,12 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "id": "0c8796e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "import os\n",
     "import pandas as pd\n",
     "import dask.dataframe as dd\n",
     "import seaborn as sns\n",
@@ -25,19 +25,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "75276903",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with dask\n",
+    "# collect parquet files\n",
     "\n",
-    "census_tract_df = dd.read_csv(\"../census_outputs/census_tract_2020.csv\")"
+    "output_file = \"../census_outputs/census_tract_2020.parquet/\"\n",
+    "\n",
+    "parq_files = [ os.path.join(output_file, file) for file in os.listdir(output_file) if \".parquet\" in file ]\n",
+    "\n",
+    "parq_files.sort()\n",
+    "\n",
+    "census_tract_df = dd.concat([ dd.read_parquet(file) for file in parq_files ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "6866ef52",
    "metadata": {},
    "outputs": [
@@ -63,11 +69,12 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>geo_id</th>\n",
-       "      <th>tract_name</th>\n",
-       "      <th>state_name</th>\n",
        "      <th>state_code</th>\n",
+       "      <th>state_name</th>\n",
        "      <th>county</th>\n",
        "      <th>tract</th>\n",
+       "      <th>tract_name</th>\n",
+       "      <th>variable_code</th>\n",
        "      <th>variable_name</th>\n",
        "      <th>value</th>\n",
        "      <th>measurement</th>\n",
@@ -79,11 +86,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1400000US01073003600</td>\n",
-       "      <td>Census Tract 36, Jefferson County, Alabama</td>\n",
+       "      <td>01</td>\n",
        "      <td>Alabama</td>\n",
-       "      <td>1</td>\n",
-       "      <td>73</td>\n",
-       "      <td>3600</td>\n",
+       "      <td>073</td>\n",
+       "      <td>003600</td>\n",
+       "      <td>Census Tract 36, Jefferson County, Alabama</td>\n",
+       "      <td>DP02_0001E</td>\n",
        "      <td>Estimate!!HOUSEHOLDS BY TYPE!!Total households</td>\n",
        "      <td>2019</td>\n",
        "      <td>estimate</td>\n",
@@ -92,12 +100,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1400000US01073003600</td>\n",
-       "      <td>Census Tract 36, Jefferson County, Alabama</td>\n",
+       "      <td>1400000US01073003700</td>\n",
+       "      <td>01</td>\n",
        "      <td>Alabama</td>\n",
-       "      <td>1</td>\n",
-       "      <td>73</td>\n",
-       "      <td>3600</td>\n",
+       "      <td>073</td>\n",
+       "      <td>003700</td>\n",
+       "      <td>Census Tract 37, Jefferson County, Alabama</td>\n",
+       "      <td>DP02_0001EA</td>\n",
        "      <td>Annotation of Estimate!!HOUSEHOLDS BY TYPE!!To...</td>\n",
        "      <td>0</td>\n",
        "      <td>annotation of estimate</td>\n",
@@ -106,12 +115,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1400000US01073003600</td>\n",
-       "      <td>Census Tract 36, Jefferson County, Alabama</td>\n",
+       "      <td>1400000US01073003802</td>\n",
+       "      <td>01</td>\n",
        "      <td>Alabama</td>\n",
-       "      <td>1</td>\n",
-       "      <td>73</td>\n",
-       "      <td>3600</td>\n",
+       "      <td>073</td>\n",
+       "      <td>003802</td>\n",
+       "      <td>Census Tract 38.02, Jefferson County, Alabama</td>\n",
+       "      <td>DP02_0001M</td>\n",
        "      <td>Margin of Error!!HOUSEHOLDS BY TYPE!!Total hou...</td>\n",
        "      <td>408</td>\n",
        "      <td>margin of error</td>\n",
@@ -120,12 +130,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1400000US01073003600</td>\n",
-       "      <td>Census Tract 36, Jefferson County, Alabama</td>\n",
+       "      <td>1400000US01073003803</td>\n",
+       "      <td>01</td>\n",
        "      <td>Alabama</td>\n",
-       "      <td>1</td>\n",
-       "      <td>73</td>\n",
-       "      <td>3600</td>\n",
+       "      <td>073</td>\n",
+       "      <td>003803</td>\n",
+       "      <td>Census Tract 38.03, Jefferson County, Alabama</td>\n",
+       "      <td>DP02_0001MA</td>\n",
        "      <td>Annotation of Margin of Error!!HOUSEHOLDS BY T...</td>\n",
        "      <td>0</td>\n",
        "      <td>annotation of margin of error</td>\n",
@@ -134,12 +145,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1400000US01073003600</td>\n",
-       "      <td>Census Tract 36, Jefferson County, Alabama</td>\n",
+       "      <td>1400000US01073003900</td>\n",
+       "      <td>01</td>\n",
        "      <td>Alabama</td>\n",
-       "      <td>1</td>\n",
-       "      <td>73</td>\n",
-       "      <td>3600</td>\n",
+       "      <td>073</td>\n",
+       "      <td>003900</td>\n",
+       "      <td>Census Tract 39, Jefferson County, Alabama</td>\n",
+       "      <td>DP02_0001PE</td>\n",
        "      <td>Percent!!HOUSEHOLDS BY TYPE!!Total households</td>\n",
        "      <td>2019</td>\n",
        "      <td>percent</td>\n",
@@ -151,19 +163,19 @@
        "</div>"
       ],
       "text/plain": [
-       "                 geo_id                                  tract_name  \\\n",
-       "0  1400000US01073003600  Census Tract 36, Jefferson County, Alabama   \n",
-       "1  1400000US01073003600  Census Tract 36, Jefferson County, Alabama   \n",
-       "2  1400000US01073003600  Census Tract 36, Jefferson County, Alabama   \n",
-       "3  1400000US01073003600  Census Tract 36, Jefferson County, Alabama   \n",
-       "4  1400000US01073003600  Census Tract 36, Jefferson County, Alabama   \n",
+       "                 geo_id state_code state_name county   tract  \\\n",
+       "0  1400000US01073003600         01    Alabama    073  003600   \n",
+       "1  1400000US01073003700         01    Alabama    073  003700   \n",
+       "2  1400000US01073003802         01    Alabama    073  003802   \n",
+       "3  1400000US01073003803         01    Alabama    073  003803   \n",
+       "4  1400000US01073003900         01    Alabama    073  003900   \n",
        "\n",
-       "  state_name  state_code  county  tract  \\\n",
-       "0    Alabama           1      73   3600   \n",
-       "1    Alabama           1      73   3600   \n",
-       "2    Alabama           1      73   3600   \n",
-       "3    Alabama           1      73   3600   \n",
-       "4    Alabama           1      73   3600   \n",
+       "                                      tract_name variable_code  \\\n",
+       "0     Census Tract 36, Jefferson County, Alabama    DP02_0001E   \n",
+       "1     Census Tract 37, Jefferson County, Alabama   DP02_0001EA   \n",
+       "2  Census Tract 38.02, Jefferson County, Alabama    DP02_0001M   \n",
+       "3  Census Tract 38.03, Jefferson County, Alabama   DP02_0001MA   \n",
+       "4     Census Tract 39, Jefferson County, Alabama   DP02_0001PE   \n",
        "\n",
        "                                       variable_name value  \\\n",
        "0     Estimate!!HOUSEHOLDS BY TYPE!!Total households  2019   \n",
@@ -180,7 +192,7 @@
        "4                        percent  households by type  total households  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,17 +205,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "962b0687",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "911"
+       "991"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.14"
+   "version": "3.10.13"
   },
   "vscode": {
    "interpreter": {
